# euler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  copy.sh
problem1/: CMakeLists.txt  main.cpp
problem10/: main.cpp
problem11/: main.cpp
problem12/: main.cpp
problem13/: main.cpp
problem14/: main.cpp
problem15/: main.cpp
problem2/: main.cpp
problem3/: main.cpp
problem4/: main.cpp
problem5/: main.cpp
problem6/: main.cpp
problem7/: main.cpp
problem8/: CMakeLists.txt  main.cpp
problem9/: main.cpp
